[package]
name = "demo"
version = "0.1.0"
authors = ["Bytebuddha <pmg41494@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yewlma = { path = "../", features = ["full"] }
yew-route-breadcrumbs = "0.1.2"
yew-property-info = { git = "https://github.com/Type-3/yew-property-info" }
yew = { path = "../../yew/yew" }
yewtil = { path = "../../yew/yewtil" }
yew-router = { path = "../../yew/yew-router" }
